--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
@@ -23,8 +21,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.0",
     "title-case": "^3.0.3",
-    "typescript": "5.1.3",
-    "zod": "^3.21.4"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
