--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,24 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.0",
+    "styled-components": "^6.0.1",
     "title-case": "^3.0.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-styled-components": "^2.1.4",
+    "babel-plugin-twin": "^1.1.0",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "postcss-preset-env": "^8.5.1",
+    "tailwindcss": "^3.3.2",
+    "twin.macro": "^3.3.1"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
