--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-redux": "^8.1.0",
     "styled-components": "^6.0.1",
     "title-case": "^3.0.3",
