--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,14 @@
   },
   "postinstall": "prisma generate",
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^10.0.5",
+    "@nestjs/core": "^10.0.5",
+    "@nestjs/microservices": "^10.0.5",
+    "@nestjs/platform-express": "^10.0.5",
     "@prisma/client": "^4.16.1",
     "@types/module-alias": "^2.0.1",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "module-alias": "^2.2.3",
@@ -38,9 +41,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.1.8",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.5",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
